# cosmic-greeter

./: .gitignore  Cargo.toml  README.md  build.rs  cosmic-greeter-start.sh  cosmic-greeter.toml  flake.nix  justfile  package.nix
cosmic-greeter-config/: Cargo.toml
cosmic-greeter-config/src/: lib.rs  user.rs
daemon/: Cargo.toml
daemon/src/: lib.rs  main.rs
dbus/: com.system76.CosmicGreeter.conf
debian/: changelog  control  copyright  cosmic-greeter-daemon.install  cosmic-greeter-daemon.service  cosmic-greeter-sysusers.conf  cosmic-greeter-tmpfiles.conf  cosmic-greeter.config  cosmic-greeter.cosmic-greeter-fingerprint.pam  cosmic-greeter.install  cosmic-greeter.pam  cosmic-greeter.postinst  cosmic-greeter.prerm  cosmic-greeter.service  cosmic-greeter.sysusers  cosmic-greeter.templates  cosmic-greeter.tmpfiles  postinst  rules
examples/: pam.rs  server.rs
i18n/ar/: cosmic_greeter.ftl
i18n/be/: cosmic_greeter.ftl
i18n/bg/: cosmic_greeter.ftl
i18n/ca/: cosmic_greeter.ftl
i18n/cs/: cosmic_greeter.ftl
i18n/de/: cosmic_greeter.ftl
i18n/el/: cosmic_greeter.ftl
i18n/en/: cosmic_greeter.ftl
i18n/es/: cosmic_greeter.ftl
i18n/es-419/: cosmic_greeter.ftl
i18n/et/: cosmic_greeter.ftl
i18n/fa/: cosmic_greeter.ftl
i18n/fi/: cosmic_greeter.ftl
i18n/fr/: cosmic_greeter.ftl
i18n/ga/: cosmic_greeter.ftl
i18n/he/: cosmic_greeter.ftl
i18n/hi/: cosmic_greeter.ftl
i18n/hr/: cosmic_greeter.ftl
i18n/hu/: cosmic_greeter.ftl
i18n/id/: cosmic_greeter.ftl
i18n/is/: cosmic_greeter.ftl
i18n/it/: cosmic_greeter.ftl
i18n/ja/: cosmic_greeter.ftl
i18n/kab/: cosmic_greeter.ftl
i18n/kk/: cosmic_greeter.ftl
i18n/kmr/: cosmic_greeter.ftl
i18n/kn/: cosmic_greeter.ftl
i18n/ko/: cosmic_greeter.ftl
i18n/lt/: cosmic_greeter.ftl
i18n/nb-NO/: cosmic_greeter.ftl
i18n/nl/: cosmic_greeter.ftl
i18n/nn/: cosmic_greeter.ftl
i18n/pa/: cosmic_greeter.ftl
i18n/pl/: cosmic_greeter.ftl
i18n/pt/: cosmic_greeter.ftl
i18n/pt-BR/: cosmic_greeter.ftl
i18n/ro/: cosmic_greeter.ftl
i18n/ru/: cosmic_greeter.ftl
i18n/sk/: cosmic_greeter.ftl
i18n/sr/: cosmic_greeter.ftl
i18n/sr-Cyrl/: cosmic_greeter.ftl
i18n/sr-Latn/: cosmic_greeter.ftl
i18n/sv/: cosmic_greeter.ftl
i18n/th/: cosmic_greeter.ftl
i18n/tr/: cosmic_greeter.ftl
i18n/uk/: cosmic_greeter.ftl
i18n/zh-CN/: cosmic_greeter.ftl
i18n/zh-TW/: cosmic_greeter.ftl
i18n/zh_CN/: cosmic_greeter.ftl
src/: common.rs  fprintd.rs  greeter.rs  image_container.rs  initial_session.rs  input_source.rs  keyboard_layout_wayland.rs  lib.rs  localize.rs  locker.rs  logind.rs  main.rs  networkmanager.rs  pam_worker.rs  state.rs  systemd.rs  theme.rs  time.rs  upower.rs
src/greeter/: ipc.rs
src/wayland/: mod.rs
tests/: last_user_ldap_test.rs
