[package]
name = "cosmic-greeter"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["unstable-locales"] }
cosmic-bg-config.workspace = true
cosmic-comp-config.workspace = true
cosmic-config = { workspace = true, features = ["calloop", "macro"] }
cosmic-greeter-config.workspace = true
cosmic-greeter-daemon = { path = "daemon" }
dirs = "5"
env_logger.workspace = true
freedesktop_entry_parser = "1.3.0"
libcosmic = { workspace = true, features = ["tokio", "wayland"] }
log.workspace = true
pam-client = "0.5.0"
pwd.workspace = true
ron.workspace = true
shlex = "1.3.0"
xkb-data = "0.2"
xdg = "2.5.2"
#TODO: reduce features
tokio = { workspace = true, features = ["full"] }
wayland-client = "0.31.5"
# For network status using networkmanager feature
cosmic-dbus-networkmanager = { git = "https://github.com/pop-os/dbus-settings-bindings", rev = "badfc6a", optional = true }
# For logind integration using logind feature
logind-zbus = { version = "4", optional = true }
# Fix zbus compilation by manually adding nix with user feature
nix = { workspace = true, optional = true }
# For power status with upower feature
upower_dbus = { git = "https://github.com/pop-os/dbus-settings-bindings", rev = "badfc6a", optional = true }
# Required for some features
zbus = { workspace = true, optional = true }
# Internationalization
i18n-embed = { version = "0.14", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.7"
rust-embed = "8"
futures-util = "0.3.30"

[dependencies.greetd_ipc]
version = "0.10.3"
features = ["tokio-codec"]

[features]
default = ["logind", "networkmanager", "upower"]
logind = ["logind-zbus", "zbus"]
networkmanager = ["cosmic-dbus-networkmanager", "zbus"]
upower = ["upower_dbus", "zbus"]
zbus = ["dep:zbus", "nix"]

[profile.dev.package.tiny-skia]
opt-level = 2

[profile.dev.package.rustybuzz]
opt-level = 2

[profile.dev.package.ttf-parser]
opt-level = 2

[workspace]
members = ["cosmic-greeter-config", "daemon"]
resolver = "2"

[workspace.package]
rust-version = "1.79.0"

[workspace.dependencies]
env_logger = "0.10.2"
log = "0.4.22"
# Fix zbus compilation by manually adding nix with user feature
nix = { version = "0.26", features = ["user"] }
pwd = "1.4.0"
ron = "0.8"
serde = "1"
tokio = "1.39.1"
zbus = "4"

[workspace.dependencies.cosmic-bg-config]
git = "https://github.com/pop-os/cosmic-bg"
default-features = false

[workspace.dependencies.cosmic-comp-config]
git = "https://github.com/pop-os/cosmic-comp"
branch = "a11y-zoom_noble"
default-features = false

[workspace.dependencies.cosmic-greeter-config]
path = "cosmic-greeter-config"

[workspace.dependencies.cosmic-config]
git = "https://github.com/pop-os/libcosmic"
default-features = false

[workspace.dependencies.cosmic-theme]
git = "https://github.com/pop-os/libcosmic"
default-features = false

[workspace.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
