[package]
name = "cosmic-greeter"
version = "0.1.0"
edition = "2024"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
anyhow = "1"
async-fn-stream = "0.2.2"
icu = { version = "1.5.0", features = [
    "experimental",
    "compiled_data",
    "icu_datetime_experimental",
] }
chrono-tz = "0.10"
chrono = { version = "0.4", features = ["unstable-locales"] }
cosmic-applets-config.workspace = true
cosmic-bg-config.workspace = true
cosmic-comp-config.workspace = true
cosmic-config = { workspace = true, features = ["calloop", "macro"] }
cosmic-greeter-config.workspace = true
cosmic-greeter-daemon = { path = "daemon" }
dirs = "6"
env_logger.workspace = true
freedesktop_entry_parser = "1.3.0"
libcosmic = { workspace = true, features = [
    "autosize",
    "winit",
    "multi-window",
    "desktop",
    "wayland",
    "tokio",
    "dbus-config",
] }
log.workspace = true
pam-client = "0.5.0"
pwd.workspace = true
ron.workspace = true
shlex = "1.3.0"
xkb-data = "0.2"
xdg = "2.5.2"
#TODO: reduce features
tokio = { workspace = true, features = ["full"] }
wayland-client = "0.31.8"
# For network status using networkmanager feature
cosmic-dbus-networkmanager = { git = "https://github.com/pop-os/dbus-settings-bindings", optional = true }
# For logind integration using logind feature
logind-zbus = { version = "5", optional = true }
# Fix zbus compilation by manually adding nix with user feature
nix = { workspace = true, optional = true }
# For power status with upower feature
upower_dbus = { git = "https://github.com/pop-os/dbus-settings-bindings", optional = true }
# Required for some features
zbus = { workspace = true, optional = true }
# CLI arguments
clap_lex = "0.7"
# Internationalization
i18n-embed = { version = "0.14", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.7"
rust-embed = "8"
futures-util = "0.3.30"
timedate-zbus = { git = "https://github.com/pop-os/dbus-settings-bindings" }

[dependencies.greetd_ipc]
version = "0.10.3"
features = ["tokio-codec"]

[features]
default = ["logind", "networkmanager", "upower"]
logind = ["logind-zbus", "zbus"]
networkmanager = ["cosmic-dbus-networkmanager", "zbus"]
upower = ["upower_dbus", "zbus"]
zbus = ["dep:zbus", "nix"]

[profile.dev.package.tiny-skia]
opt-level = 2

[profile.dev.package.rustybuzz]
opt-level = 2

[profile.dev.package.ttf-parser]
opt-level = 2

[workspace]
members = ["cosmic-greeter-config", "daemon"]
resolver = "2"

[workspace.package]
rust-version = "1.85.0"

[workspace.dependencies]
env_logger = "0.10.2"
log = "0.4.22"
# Fix zbus compilation by manually adding nix with user feature
nix = { version = "0.29", features = ["user"] }
pwd = "1.4.0"
ron = "0.10.1"
serde = "1"
tokio = "1.39.1"
zbus = "5"

[workspace.dependencies.cosmic-applets-config]
git = "https://github.com/pop-os/cosmic-applets"
default-features = false

[workspace.dependencies.cosmic-bg-config]
git = "https://github.com/pop-os/cosmic-bg"
default-features = false

[workspace.dependencies.cosmic-comp-config]
git = "https://github.com/pop-os/cosmic-comp"
default-features = false

[workspace.dependencies.cosmic-greeter-config]
path = "cosmic-greeter-config"

[workspace.dependencies.cosmic-config]
git = "https://github.com/pop-os/libcosmic"
default-features = false

[workspace.dependencies.cosmic-theme]
git = "https://github.com/pop-os/libcosmic"
default-features = false

[workspace.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false

# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
