[package]
name = "cosmic-greeter"
version = "0.1.0"
edition = "2024"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
anyhow = "1"
async-fn-stream = "0.3"
icu = { version = "2.0.0", features = ["compiled_data"] }
chrono-tz = "0.10"
chrono = { version = "0.4", features = ["unstable-locales"] }
cosmic-applets-config.workspace = true
cosmic-bg-config.workspace = true
cosmic-comp-config.workspace = true
cosmic-config = { workspace = true, features = ["calloop", "macro"] }
cosmic-greeter-config.workspace = true
cosmic-greeter-daemon = { path = "daemon" }
dirs = "6"
freedesktop_entry_parser = "1.3.0"
libcosmic = { workspace = true, features = [
    "autosize",
    "winit",
    "multi-window",
    "desktop",
    "wayland",
    "tokio",
    "dbus-config",
] }
tracing.workspace = true
tracing-journald = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
pam-client = "0.5.0"
pwd.workspace = true
ron.workspace = true
shlex = "1.3.0"
xkb-data = "0.2"
xdg = "3.0"
#TODO: reduce features
tokio = { workspace = true, features = ["full"] }
wayland-client = "0.31.11"
cosmic-settings-subscriptions = { git = "https://github.com/pop-os/cosmic-settings-subscriptions", default-features = false, features = [
    "accessibility",
    "cosmic_a11y_manager",
] }
cosmic-settings-daemon-config = { git = "https://github.com/pop-os/cosmic-settings-daemon", default-features = false, features = [
    "greeter",
] }
cctk = { git = "https://github.com/pop-os/cosmic-protocols", package = "cosmic-client-toolkit" }
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols", default-features = false, features = ["client"] }

# For network status using networkmanager feature
cosmic-dbus-networkmanager = { git = "https://github.com/pop-os/dbus-settings-bindings", optional = true }
# For logind integration using logind feature
logind-zbus = { version = "5", optional = true }
# Fix zbus compilation by manually adding nix with user feature
nix = { workspace = true, optional = true }
# For power status with upower feature
upower_dbus = { git = "https://github.com/pop-os/dbus-settings-bindings", optional = true }
# Required for some features
zbus = { workspace = true, optional = true }
# CLI arguments
clap_lex = "0.7"
# Internationalization
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
rust-embed = "8"
futures-util = "0.3.31"
timedate-zbus = { git = "https://github.com/pop-os/dbus-settings-bindings" }
cosmic-randr-shell = { workspace = true }
kdl.workspace = true
color-eyre.workspace = true

[dependencies.greetd_ipc]
version = "0.10.3"
features = ["tokio-codec"]

[features]
default = ["logind", "networkmanager", "upower", "systemd"]
logind = ["logind-zbus", "zbus", "systemd"]
systemd = ["tracing-journald"]
networkmanager = ["cosmic-dbus-networkmanager", "zbus"]
upower = ["upower_dbus", "zbus"]
zbus = ["dep:zbus", "nix"]


[profile.dev.package.tiny-skia]
opt-level = 2

[profile.dev.package.rustybuzz]
opt-level = 2

[profile.dev.package.ttf-parser]
opt-level = 2

[workspace]
members = ["cosmic-greeter-config", "daemon"]
resolver = "2"

[workspace.package]
rust-version = "1.85.0"

[workspace.dependencies]
tracing = "0.1"
tracing-journald = { version = "0.3" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6.5"

# Fix zbus compilation by manually adding nix with user feature
nix = { version = "0.30", features = ["user"] }
pwd = "1.4.0"
ron = "0.11"
serde = "1"
tokio = "1.47.1"
zbus = "5"
kdl = "6"
cosmic-randr-shell = { git = "https://github.com/pop-os/cosmic-randr", default-features = false }

[workspace.dependencies.cosmic-applets-config]
git = "https://github.com/pop-os/cosmic-applets"
default-features = false

[workspace.dependencies.cosmic-bg-config]
git = "https://github.com/pop-os/cosmic-bg"
default-features = false

[workspace.dependencies.cosmic-comp-config]
git = "https://github.com/pop-os/cosmic-comp"
default-features = false
features = ["output", "randr"]

[workspace.dependencies.cosmic-greeter-config]
path = "cosmic-greeter-config"

[workspace.dependencies.cosmic-config]
git = "https://github.com/pop-os/libcosmic"
default-features = false

[workspace.dependencies.cosmic-theme]
git = "https://github.com/pop-os/libcosmic"
default-features = false

[workspace.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false

[patch."https://github.com/smithay/client-toolkit.git"]
sctk = { package = "smithay-client-toolkit", version = "0.20.0" }

[patch."https://github.com/pop-os/cosmic-protocols"]
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols//" }
cctk = { git = "https://github.com/pop-os/cosmic-protocols//", package = "cosmic-client-toolkit" }

# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
