[package]
name = "cosmic-greeter-config"
version = "1.0.4"
edition = "2024"
description = "Configuration for COSMIC Greeter"
repository = "https://github.com/pop-os/cosmic-greeter"
license = "GPL-3.0-only"

[dependencies]
cosmic-config.workspace = true
tracing.workspace = true
serde.workspace = true
