[package]
name = "cosmic-greeter-daemon"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }
libc = "0.2"
cosmic-applets-config.workspace = true
cosmic-bg-config.workspace = true
cosmic-comp-config.workspace = true
cosmic-config.workspace = true
cosmic-theme.workspace = true
tracing.workspace = true
tracing-journald = { workspace = true, optional = true }
color-eyre.workspace = true
nix.workspace = true
pwd.workspace = true
ron.workspace = true
serde.workspace = true
zbus.workspace = true
cosmic-randr-shell.workspace = true
kdl.workspace = true

#TODO: reduce features
tokio = { workspace = true, features = ["full"] }
xdg = "3.0"

[features]
default = ["systemd"]
systemd = ["tracing-journald"]
